# TJCS_Car_Sim_1092

./: .gitignore  BridgeLightingControl.cpp  BridgeLightingControl.h  Car_Function.cpp  Car_Sim.cpp  Car_Sim.sln  Car_Sim.vcxproj  Car_Sim.vcxproj.filters  Class.h  Define.h  Function.cpp  README.md  VehicleStatistics.cpp  VehicleStatistics.h  VehicleTypes.cpp  VehicleTypes.h  breakdown_rate_statistics.csv  vehicle_probability_statistics.csv
Easyx/: BridgeLightingControl.cpp  BridgeLightingControl.h  Car_Function.cpp  Car_Sim.cpp  Car_Sim.sln  Car_Sim.vcxproj  Car_Sim.vcxproj.filters  Class.h  Define.h  Function.cpp  Random.h  VehicleStatistics.cpp  VehicleStatistics.h
Qt/QtQuickApplication1/: CMakeLists.txt  CMakeUserPresets.json  main.cpp  main.qml
Qt/QtWidgetApplication/: CMakeLists.txt  main.cpp  qtwidgetapplication.cpp  qtwidgetapplication.h  qtwidgetapplication.ui
